# ForecastIQ

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-entrypoint.sh  pyproject.toml  requirements.txt
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
app/: app.py
app/components/: __init__.py  charts.py  kpi.py  layout.py
app/pages/: 10_Model_Performance.py  1_Home.py  2_Executive_Dashboard.py  3_Sales_Analytics.py  4_Customer_Analytics.py  5_Product_Analytics.py  6_Regional_Analytics.py  7_Returns_Analytics.py  8_Forecasting.py  9_Business_Insights.py
app/utils/: __init__.py  data_access.py  export.py  filters.py  format.py  scope.py  theme.py  warehouse.py
config/: config.yaml
data/: README.md
docs/: analytics.md  api.md  app_architecture.md  architecture.md  dashboard_design.md  data_dictionary.md  database_schema.md  deployment.md  etl_pipeline.md  folder_structure.md  forecasting.md  installation.md  release.md  resume_description.md  roadmap.md
notebooks/: 01_eda.ipynb
pipelines/: bootstrap.py  run_analytics.py  run_etl.py  run_forecast.py
powerbi/: README.md  dax_measures.md
sql/: schema.sql  views.sql
sql/queries/: customer_segmentation.sql  forecast_vs_actual.sql  regional_performance.sql  revenue_trends.sql  top_products.sql
src/forecastiq/: __init__.py  bootstrap.py  config.py  sample.py
src/forecastiq/analytics/: __init__.py  base.py  insights.py  kpis.py  products.py  regional.py  returns.py  segmentation.py  trends.py
src/forecastiq/api/: __init__.py
src/forecastiq/etl/: __init__.py  clean.py  extract.py  load.py  transform.py  validate.py
src/forecastiq/forecasting/: __init__.py  data.py  evaluator.py  features.py  models.py  predictor.py  trainer.py  visualizations.py
src/forecastiq/utils/: __init__.py  io.py  logger.py
tests/: __init__.py  conftest.py  test_analytics_insights.py  test_analytics_kpis.py  test_analytics_products.py  test_analytics_regional.py  test_analytics_returns.py  test_analytics_segmentation.py  test_analytics_trends.py  test_app_pages.py  test_bootstrap.py  test_clean.py  test_extract_enrich.py  test_forecasting_data.py  test_forecasting_evaluator.py  test_forecasting_features.py  test_forecasting_models.py  test_forecasting_predictor.py  test_forecasting_trainer.py  test_transform_load.py  test_validate.py
