[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forecastiq"
version = "1.0.0"
description = "AI-Powered Sales Forecasting & Business Analytics Platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vinayak Arya" }]
keywords = ["forecasting", "analytics", "etl", "business-intelligence", "time-series", "streamlit"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.1",
    "numpy>=1.24",
    "python-dateutil>=2.8",
    "SQLAlchemy>=2.0",
    "PyYAML>=6.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
app = ["streamlit>=1.40"]
dev = ["pytest>=8.0", "ruff>=0.6", "nbformat>=5.0", "nbconvert>=7.0", "ipykernel>=6.0"]

[project.urls]
Homepage = "https://github.com/vinayakarya02/ForecastIQ"
Repository = "https://github.com/vinayakarya02/ForecastIQ"
Issues = "https://github.com/vinayakarya02/ForecastIQ/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
# E501 is owned by the formatter (it wraps code; long strings/docstrings are intentional);
# C408 keeps dict(...) calls, which read better for Plotly/Matplotlib keyword layouts.
ignore = ["E501", "C408"]

[tool.ruff.lint.per-file-ignores]
# App pages / pipelines intentionally insert sys.path before importing (E402),
# and re-export nothing; module-level imports must follow the path bootstrap.
"app/**" = ["E402"]
"pipelines/**" = ["E402"]
